fix(layout): Fix grid layout of view template #58
* replace vendor classes with custom grid classes
* delete obsolete wrapping container elements

--- a/resources/css/_inner-document.less
+++ b/resources/css/_inner-document.less
@@ -8,7 +8,6 @@
 // Document headline
 .tp-document-title-wrapper {
   @media (min-width: @screen-sm) {
-    margin-bottom: 1em;
     border-bottom: 2px solid @color-gray-medium;
   }
 
@@ -30,10 +29,9 @@
 
 // Wrapper for content in view.html
 #main-wrapper {
-  max-width: @screen-lg;
-  margin-top: 100px;
+  margin-top: @navbar-offset-small;
   @media (min-width: @screen-lg-min) {
-    margin-top: 110px;
+    margin-top: @navbar-offset-large;
   }
 }
 
