--- a/resources/css/_tp-grid.less
+++ b/resources/css/_tp-grid.less
@@ -21,3 +21,45 @@
     margin: 0 auto;
   }
 }
+
+// Columns
+
+.tp-column, .tp-columns {
+  position: relative;
+  padding-left: 1.3rem;
+  padding-right: 1.3rem;
+
+  @media only screen and (min-width: @screen-md-min) {
+    float: left;
+    min-height: 1px;
+  }
+}
+
+// Rows
+
+.tp-row {
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 0;
+  margin-bottom: 0;
+  max-width: 95vw;
+  @media screen and (min-width: @screen-xs-min) {
+    max-width: 80vw;
+  }
+}
+
+.tp-row:before, .tp-row:after {
+  content: " ";
+  display: table;
+}
+
+.tp-row:after {
+  clear: both;
+}
+
+.tp-column-fullwidth {
+  @extend .small-12;
+  @extend .tp-columns;
+  @extend .tp-column;
+}
